--- a/Regression/Cruise-Ships/Cruise_ship_submitted.ipynb
+++ b/Regression/Cruise-Ships/Cruise_ship_submitted.ipynb
@@ -1242,7 +1242,7 @@
     "feature_importances.set_index('Feature', inplace=True, drop=True)\n",
     "feature_importances[0:5].plot.bar()\n",
     "plt.show()\n",
-    "(feature_importances[:5])"
+    "print(feature_importances[:5])"
    ]
   }
  ],
